# CFD

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: error_handling.py  files_api.py  geometry_api.py  mesh_api.py  preprocess_api.py  projects_api.py  results_api.py  solver_api.py  tasks_api.py
backend/app/core/: config.py  workspace.py
backend/app/schemas/: common.py  geometry.py  mesh.py  preprocess.py  projects.py  results.py  solver.py  tasks.py
backend/app/services/: _ids.py  cae_files.py  projects.py
backend/app/services/geometry/: create_box_geometry.py  create_primitive_geometry.py  gmsh_helpers.py  import_step_geometry.py
backend/app/services/mesh/: generate_mesh.py  mesh_helpers.py
backend/app/services/preprocess/: set_boundary.py  set_load.py  set_material.py
backend/app/services/results/: get_result_field.py  get_result_summary.py  result_converter.py
backend/app/services/solver/: inp_writer.py  run_static_solve.py
backend/app/services/structural_plugins/: __init__.py  base.py  manager.py  models.py
backend/app/services/tasks/: task_manager.py
front/: README.md  index.html  package-lock.json  package.json  vite.config.js
front/src/: App.vue  main.js
front/src/api/: client.js  geometry.js  mesh.js  preprocess.js  projects.js  results.js  solver.js
front/src/components/: BoundaryLoadPanel.vue  FileFlowPanel.vue  GeometryPanel.vue  MaterialPanel.vue  MeshPanel.vue  ResultPanel.vue  StatusLog.vue  VtkViewport.vue
front/src/router/: index.js
front/src/stores/: workbench.js
(+6 files in other folders)
